--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ pipeline:
     environment:
       - DOCKER_HOST=tcp://127.0.0.1:2375
     commands:
-      - docker build -t hello-world-test .
+      - docker build -t hello-world-tests .
     when:
       branch: master
       event: push
